--- a/index.html
+++ b/index.html
@@ -4,12 +4,48 @@
 <head>
   <meta charset="utf-8">
   <title>Aaqib Javeed</title>
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="favicon.ico">
+
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Nanum+Brush+Script&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+  <!-- Bootstrap Scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 
 <body>
+
+  <section id="top">
+
+  </div>
+
+  <nav class="navbar navbar-expand-lg">
+    <a class="navbar-brand" href="">codeaj</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#mid">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#bottom">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I am AJ</h1>
@@ -17,6 +53,10 @@
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
+
+</section>
+
+<section id="mid">
 
   <div class="middle-container">
     <div class="profile">
@@ -28,7 +68,7 @@
       <p class="hobby">And I ❤️ trekking :)</p>
     </div>
     <hr>
-    <div class="skills">
+    <div id="skills" class="skills">
       <h2 class="sub-headers my-skills">My Skills</h2>
       <div class="skill-row">
         <img class="testing-skill-img" src="https://media.giphy.com/media/S8ZHY5Y9ULhSAGPg50/giphy.gif" alt="testing-skill-img">
@@ -46,17 +86,24 @@
       <h2 class=sub-headers>Get In Touch</h2>
       <h3>If you love cycling or fitness as much as I do</h3>
       <p class="contact-message">Love fitness? We can discuss endlessly about fitness and some of programming too!</p>
-      <a class="btn" href="mailto:aaqibjaved7@email.com">CONTACT ME</a>
+      <button type="button" class="btn btn-outline-dark btn-md">CONTACT ME</button>
     </div>
   </div>
 
 
+</section>
+
+
+<section id="bottom">
+
+
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/aaqib-javeed-69126869">LinkedIn</a>
-    <a class="footer-link" href="https://www.instagram.com/aaqibjaved7/">Instagram</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/aaqib-javeed-69126869"><i class="fab fa-linkedin-in"></i></a>
+    <a class="footer-link" href="https://www.instagram.com/aaqibjaved7/"><i class="social-icon fab fa-instagram"></i></a>
     <p class=copyright>© 2020 Aaqib Javeed</p>
   </div>
 
+</section>
 </body>
 
 </html>
