--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       <img class=profile-img src="images/boy.png" alt="Icon made by Freepik from www.flaticon.com">
       <h2 class="sub-headers">Hello there.</h2>
       <p>I am a Software Test Engineer by profession. I started learning Software Development skills as a Hobby.</p>
-      <p>You can checkout my 1st android app on Google Play Store - <a href="https://play.google.com/store/apps/details?id=com.noobdeveloper.quranprojectlistview"><strong>Quran App</strong></a> by <em>codeaj</em></p>
-      <p>I want to be jack of all and master of atleast one :) and I am in a journey to decide what that one is.</p>
+      <p>You can check out my 1st android app on Google Play Store - <a href="https://play.google.com/store/apps/details?id=com.noobdeveloper.quranprojectlistview"><strong>Quran App</strong></a> by <em>codeaj</em></p>
+      <p>I want to be the jack of all and master of at least one :) and I am on a journey to decide what that one is.</p>
       <p class="hobby">And I ❤️ trekking :)</p>
     </div>
     <hr>
