--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <h2 class=sub-headers>Get In Touch</h2>
       <h3>If you love cycling or fitness as much as I do</h3>
       <p class="contact-message">Love fitness? We can discuss endlessly about fitness and some of programming too!</p>
-      <button type="button" class="btn btn-outline-dark btn-md">CONTACT ME</button>
+      <a href="mailto:some@email.com" class="btn">CONTACT ME</button>
     </div>
   </div>
 
