--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   </div>
 
-  <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="">codeaj</a>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <a class="navbar-brand" href="#">codeaj</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -63,8 +63,8 @@
       <img class=profile-img src="images/boy.png" alt="Icon made by Freepik from www.flaticon.com">
       <h2 class="sub-headers">Hello there.</h2>
       <p>I am a Software Test Engineer by profession. I started learning Software Development skills as a Hobby.</p>
-      <p>You can check out my 1st android app on Google Play Store - <a href="https://play.google.com/store/apps/details?id=com.noobdeveloper.quranprojectlistview"><strong>Quran App</strong></a> by <em>codeaj</em></p>
-      <p>I want to be the jack of all and master of at least one :) and I am on a journey to decide what that one is.</p>
+      <p>You can checkout my 1st android app on Google Play Store - <a href="https://play.google.com/store/apps/details?id=com.noobdeveloper.quranprojectlistview"><strong>Quran App</strong></a> by <em>codeaj</em></p>
+      <p>I want to be jack of all and master of atleast one :) and I am in a journey to decide what that one is.</p>
       <p class="hobby">And I ❤️ trekking :)</p>
     </div>
     <hr>
@@ -86,7 +86,7 @@
       <h2 class=sub-headers>Get In Touch</h2>
       <h3>If you love cycling or fitness as much as I do</h3>
       <p class="contact-message">Love fitness? We can discuss endlessly about fitness and some of programming too!</p>
-      <a href="mailto:some@email.com" class="btn">CONTACT ME</button>
+      <a class="btn btn-light btn-lg" href="mailto:aaqibjaved7@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
